started work on header/hero

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+      <a class="navbar-brand ms-4" href="#">EL</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ms-auto me-4">
           <a class="nav-item nav-link" href="#">Home</a>
           <a class="nav-item nav-link" href="#">Projects</a>
           <a class="nav-item nav-link" href="#">About Me</a>
@@ -24,6 +24,13 @@
          </div>
         </div>
     </nav>
+    <div class="container-fluid">
+      <div class="hero position-relative">
+        <div class="hero-sub-text position-absolute">
+          <h3></h3>
+        </div>
+      </div>
+    </div>
     
 
     
