--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -20,13 +20,13 @@
           <a class="nav-item nav-link" href="#">Home</a>
           <a class="nav-item nav-link" href="#">Projects</a>
           <a class="nav-item nav-link" href="#">About Me</a>
-          <a class="nav-item nav-link" href="#">Links</a>
+          <a class="nav-item nav-link" href="#">Link</a>
          </div>
         </div>
     </nav>
     <div class="container-fluid">
-      <div class="hero position-relative">
-        <div class="hero-sub-text position-absolute">
+      <div class="hero-background">
+        <div class="hero-sub-text">
           <h3></h3>
         </div>
       </div>
