main header content set up. started the projects scroll wheel.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,64 @@
          </div>
         </div>
     </nav>
-    <div class="container-fluid">
-      <div class="hero-background">
-        <div class="hero-sub-text">
-          <h3></h3>
+    <div id="hero">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-2 m-auto">
+            <div class="text-center">
+              <h2>Fullstack Developer</h2>
+              <p>Southeastern New Mexico</p>
+            </div>
+          </div>
+
+          <div class="col-7 m-auto">
+            <div class="text-center align-content-center">
+              <img class="rounded-circle" src="aiavi.jpg" alt="" width="75%"  >
+              <h1 class="mt-4">Emma-Lou</h1>
+            </div>
+          </div>
+
+          <div class="col-3 mt-auto">
+            <div class="blockquote-padding">
+              <blockquote class="blockquote blockquote--border" cite="Hunter S. Thompson">
+                <p class="blockquote--text">"Buy the ticket, take the ride."</p>
+                <p class="blockquote--author text-end">Hunter S. Thompson</p>
+              </blockquote>
+            </div>
+          </div>
+          
         </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row flex-nowrap overflow-scroll">
+        <div class="col-11">
+          <div class="projects project-img">
+            <img src="https://picsum.photos/600/600" alt="">
+            <h3 class="text-center">Airbnb Clone</h3>
+          </div>
+        </div>
+        <div class="col-11">
+          <div class="projects">
+            <img src="https://picsum.photos/600/600" alt="">
+            <h3 class="text-center">"Beyond the Horizon"</h3>
+            <p>(work in progress) Developed using C# and Unity.</p>
+          </div>
+        </div>
+        <div class="col-11">
+          <div class="projects">
+            <img src="https://picsum.photos/600/600" alt="">
+            <h3 class="text-center">project</h3>
+          </div>
+        </div>
+        <div class="col-11">
+          <div class="projects">
+            <img src="https://picsum.photos/600/600" alt="">
+            <h3 class="text-center">project</h3>
+          </div>
+        </div>
+
       </div>
     </div>
     
