--- a/index.html
+++ b/index.html
@@ -56,34 +56,70 @@
     </div>
     <div class="container-fluid">
       <div class="row flex-nowrap overflow-scroll">
+
         <div class="col-11">
-          <div class="projects project-img">
-            <img src="https://picsum.photos/600/600" alt="">
-            <h3 class="text-center">Airbnb Clone</h3>
+          <div class="row">
+            <div class="col-9">
+              <div class="projects">
+                <a href="https://emma-lous-airbnbclone.netlify.app/"><img src="" alt=""></a>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="project-info">
+                <h3><a href="https://emma-lous-airbnbclone.netlify.app/">Airbnb Newsroom Clone</h3>
+                <p>HTML and CSS project showing off responsive web design. Built using bootstrap 4</p>
+              </div>  
+            </div>
           </div>
         </div>
+
         <div class="col-11">
-          <div class="projects">
-            <img src="https://picsum.photos/600/600" alt="">
-            <h3 class="text-center">"Beyond the Horizon"</h3>
-            <p>(work in progress) Developed using C# and Unity.</p>
+          <div class="row">
+            <div class="col-9">
+              <div class="projects">
+                <img src="https://picsum.photos/1200/600" alt="">
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="project-info">
+                <h3>"Beyond the Horizon"</h3>
+                <p>(work in progress) Developed using C# and Unity.</p>
+              </div>  
+            </div>
           </div>
         </div>
+
         <div class="col-11">
-          <div class="projects">
-            <img src="https://picsum.photos/600/600" alt="">
-            <h3 class="text-center">project</h3>
-          </div>
-        </div>
-        <div class="col-11">
-          <div class="projects">
-            <img src="https://picsum.photos/600/600" alt="">
-            <h3 class="text-center">project</h3>
+          <div class="row">
+            <div class="col-9">
+              <div class="projects">
+                <img src="https://picsum.photos/1200/600" alt="">
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="project-info">
+                <h3>"Beyond the Horizon"</h3>
+                <p>(work in progress) Developed using C# and Unity.</p>
+              </div>  
+            </div>
           </div>
         </div>
 
       </div>
     </div>
+
+
+    <footer>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-4">
+            <div class="footer-links">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     
 
     
