--- a/index.html
+++ b/index.html
@@ -56,18 +56,20 @@
     </div>
     <div class="container-fluid">
       <div class="row flex-nowrap overflow-scroll">
-
+        <div class="col-1">
+          <div class="filler"></div>
+        </div>
         <div class="col-11">
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <a href="https://emma-lous-airbnbclone.netlify.app/"><img src="" alt=""></a>
+                <img src="abnbscreenshot.jpg" alt="">
               </div>
             </div>
             <div class="col-3">
               <div class="project-info">
-                <h3><a href="https://emma-lous-airbnbclone.netlify.app/">Airbnb Newsroom Clone</h3>
-                <p>HTML and CSS project showing off responsive web design. Built using bootstrap 4</p>
+                <h3>Airbnb Clone</h3>
+                <p>HTML and CSS project showing off responsive web design. Built with bootstrap 4.</p>
               </div>  
             </div>
           </div>
@@ -77,13 +79,13 @@
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <img src="https://picsum.photos/1200/600" alt="">
+                <img src="newsweekscreenshot.jpg" alt="">
               </div>
             </div>
             <div class="col-3">
-              <div class="project-info">
-                <h3>"Beyond the Horizon"</h3>
-                <p>(work in progress) Developed using C# and Unity.</p>
+              <div class="project-info text-center">
+                <h3>NewsWeek Clone</h3>
+                <p>HTML and CSS project made using bootstrap.</p>
               </div>  
             </div>
           </div>
@@ -93,7 +95,7 @@
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <img src="https://picsum.photos/1200/600" alt="">
+                <img src="bthscreenshot.jpg" alt="">
               </div>
             </div>
             <div class="col-3">
