added navigation links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto me-4">
           <a class="nav-item nav-link" href="#">Home</a>
-          <a class="nav-item nav-link" href="#">Projects</a>
+          <a class="nav-item nav-link" href="#portfolio-projects">Projects</a>
           <a class="nav-item nav-link" href="#">About Me</a>
           <a class="nav-item nav-link" href="#">Link</a>
          </div>
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div id="portfolio-projects" class="container-fluid">
       <div class="row flex-nowrap overflow-scroll">
         <div class="col-1">
           <div class="filler"></div>
@@ -63,10 +63,10 @@
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <img src="abnbscreenshot.jpg" alt="">
+                <a href="https://emma-lous-airbnbclone.netlify.app/" target="_blank"><img class="border" src="abnbscreenshot.jpg" alt=""></a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-3 m-auto">
               <div class="project-info">
                 <h3>Airbnb Clone</h3>
                 <p>HTML and CSS project showing off responsive web design. Built with bootstrap 4.</p>
@@ -79,7 +79,7 @@
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <img src="newsweekscreenshot.jpg" alt="">
+                <a href="https://emma-lous-newsweekclone.netlify.app/" target="_blank"><img class="border" src="newsweekscreenshot.jpg" alt=""></a>
               </div>
             </div>
             <div class="col-3">
@@ -95,7 +95,7 @@
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <img src="bthscreenshot.jpg" alt="">
+                <a href="#"><img class="border" src="bthscreenshot.jpg" alt=""></a>
               </div>
             </div>
             <div class="col-3">
@@ -109,7 +109,16 @@
 
       </div>
     </div>
+    <div>
+      <p>
+        <p>
+          <p>
+            pp
 
+          </p>
+        </p>
+      </p>
+    </div>
 
     <footer>
       <div class="container-fluid">
