--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a class="nav-item nav-link" href="#">About Me</a>
           <a class="nav-item nav-link" href="#">Link</a>
          </div>
-        </div>
+        </div>project-
     </nav>
     <div id="hero">
       <div class="container">
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div id="portfolio-projects" class="container-fluid">
-      <div class="row flex-nowrap overflow-scroll">
+      <div class="row flex-nowrap overflow-scroll projects-container">
         <div class="col-1">
           <div class="filler"></div>
         </div>
@@ -63,7 +63,7 @@
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <a href="https://emma-lous-airbnbclone.netlify.app/" target="_blank"><img class="border" src="abnbscreenshot.jpg" alt=""></a>
+                <a href="https://emma-lous-airbnbclone.netlify.app/" target="_blank"><img class="project-border" src="abnbscreenshot.jpg" alt=""></a>
               </div>
             </div>
             <div class="col-3 m-auto">
@@ -79,7 +79,7 @@
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <a href="https://emma-lous-newsweekclone.netlify.app/" target="_blank"><img class="border" src="newsweekscreenshot.jpg" alt=""></a>
+                <a href="https://emma-lous-newsweekclone.netlify.app/" target="_blank"><img class="project-border" src="newsweekscreenshot.jpg" alt=""></a>
               </div>
             </div>
             <div class="col-3">
@@ -95,7 +95,7 @@
           <div class="row">
             <div class="col-9">
               <div class="projects">
-                <a href="#"><img class="border" src="bthscreenshot.jpg" alt=""></a>
+                <a href="#"><img class="project-border" src="bthscreenshot.jpg" alt=""></a>
               </div>
             </div>
             <div class="col-3">
