--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div id="portfolio-projects" class="container-fluid">
-      <div class="row flex-nowrap overflow-scroll">
+      <div class="row flex-nowrap overflow-scroll projects-container">
         <div class="col-1">
           <div class="filler"></div>
         </div>
@@ -68,7 +68,7 @@
             </div>
             <div class="col-3 m-auto">
               <div class="project-info">
-                <h3>Airbnb Clone</h3>
+                <h3>Aasdfirbnb Clone</h3>
                 <p>HTML and CSS project showing off responsive web design. Built with bootstrap 4.</p>
               </div>  
             </div>
