--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="col-1">
           <div class="filler"></div>
         </div>
-        <div class="col-11">
+        <div class="col-11" style="margin-bottom: 45px;">
           <div class="row">
             <div class="col-9">
               <div class="projects">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-3 m-auto">
               <div class="project-info">
-                <h3>Aasdfirbnb Clone</h3>
+                <h3>Airbnb Clone</h3>
                 <p>HTML and CSS project showing off responsive web design. Built with bootstrap 4.</p>
               </div>  
             </div>
@@ -83,7 +83,7 @@
               </div>
             </div>
             <div class="col-3">
-              <div class="project-info text-center">
+              <div class="project-info m-auto">
                 <h3>NewsWeek Clone</h3>
                 <p>HTML and CSS project made using bootstrap.</p>
               </div>  
@@ -99,7 +99,7 @@
               </div>
             </div>
             <div class="col-3">
-              <div class="project-info">
+              <div class="project-info m-auto">
                 <h3>"Beyond the Horizon"</h3>
                 <p>(work in progress) Developed using C# and Unity.</p>
               </div>  
