finished setting up projects and navbar

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-      <a class="navbar-brand ms-4" href="#">EL</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark pb-2">
+      <a class="navbar-brand ms-4" href="#"><span class="mt-auto">EL</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,19 +26,19 @@
     </nav>
     <div id="hero">
       <div class="container">
-        <div class="row">
+        <div class="row pt-5">
 
-          <div class="col-2 m-auto">
+          <div class="col-2">
             <div class="text-center">
               <h2>Fullstack Developer</h2>
               <p>Southeastern New Mexico</p>
             </div>
           </div>
 
-          <div class="col-7 m-auto">
-            <div class="text-center align-content-center">
+          <div class="col-7">
+            <div class="text-center">
               <img class="rounded-circle" src="aiavi.jpg" alt="" width="75%"  >
-              <h1 class="mt-4">Emma-Lou</h1>
+              <h1 class="mt-5">Emma-Lou</h1>
             </div>
           </div>
 
@@ -82,8 +82,8 @@
                 <a href="https://emma-lous-newsweekclone.netlify.app/" target="_blank"><img class="border" src="newsweekscreenshot.jpg" alt=""></a>
               </div>
             </div>
-            <div class="col-3">
-              <div class="project-info m-auto">
+            <div class="col-3 m-auto">
+              <div class="project-info">
                 <h3>NewsWeek Clone</h3>
                 <p>HTML and CSS project made using bootstrap.</p>
               </div>  
@@ -98,8 +98,8 @@
                 <a href="#"><img class="border" src="bthscreenshot.jpg" alt=""></a>
               </div>
             </div>
-            <div class="col-3">
-              <div class="project-info m-auto">
+            <div class="col-3 m-auto">
+              <div class="project-info">
                 <h3>"Beyond the Horizon"</h3>
                 <p>(work in progress) Developed using C# and Unity.</p>
               </div>  
