layout setup and footer links began

--- a/index.html
+++ b/index.html
@@ -109,23 +109,44 @@
 
       </div>
     </div>
-    <div>
-      <p>
-        <p>
-          <p>
-            pp
-
-          </p>
-        </p>
-      </p>
+    <h2 class="text-center">About Me</h2>
+    <div id="about-me" class="about-me">
+      <div class="container about">
+        <div class="row">
+          <div class="col-5">
+            <div class="self-portrait">
+              <img src="aiavi.jpg" alt="" width="100%">
+            </div>
+          </div>
+          <div class="col-7">
+            <div class="description">
+              <p>some text here</p>
+            </div>
+          </div>
+        </div> 
+      </div>
     </div>
-
     <footer>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-4">
+          <div class="col-3">
             <div class="footer-links">
-
+              <button>Email</button>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-links">
+              <button>Linkedn</button>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-links">
+              <button>GitHub</button>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-links">
+              <button>AltAcademy</button>
             </div>
           </div>
         </div>
