--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -19,8 +19,8 @@
         <div class="navbar-nav ms-auto me-4">
           <a class="nav-item nav-link" href="#">Home</a>
           <a class="nav-item nav-link" href="#portfolio-projects">Projects</a>
-          <a class="nav-item nav-link" href="#">About Me</a>
-          <a class="nav-item nav-link" href="#">Link</a>
+          <a class="nav-item nav-link" href="#about-me">About Me</a>
+          <a class="nav-item nav-link" href="#footerlinks">Link</a>
          </div>
         </div>
     </nav>
@@ -126,36 +126,15 @@
         </div> 
       </div>
     </div>
-    <footer>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-3">
-            <div class="footer-links">
-              <button>Email</button>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="footer-links">
-              <button>Linkedn</button>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="footer-links">
-              <button>GitHub</button>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="footer-links">
-              <button>AltAcademy</button>
-            </div>
-          </div>
-        </div>
+    <footer id="footerlinks">
+      <div class="button-layout">
+        <a href="mailto:emilyaaronlotz@gmail.com" class="btn btn-outline-secondary">Contact me</a>
+        <a href="https://github.com/Emmah-lou" class="btn btn-outline-secondary " target="_blank">Git Hub</a>
+        <a href="https://www.linkedin.com/in/emmalouwho/" class="btn btn-outline-secondary " target="_blank">Linkedn</a>
+        <a href="https://www.altcademy.com" class="btn btn-outline-secondary " target="_blank">AltAcademy</a>
       </div>
     </footer>
     
-
-    
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
   </body>
