--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark pb-2">
       <a class="navbar-brand ms-4" href="#"><span class="mt-auto">EL</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
+      <div id="navbarNavAltMarkup" class="navbar-collapse collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a href="">Home</a></li>
+        </ul>
+      </div>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto me-4">
           <a class="nav-item nav-link" href="#">Home</a>
