--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     
 
-    <div id="hero">x
+    <div id="hero">
       <div class="container">
         <div class="row pt-5">
           
